publicsubnet2.tf
resource "aws_subnet" "publicsubnet2" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.2.0/24"

  tags = {
    Name = "publicsubnet2"
  }
}
